--- a/app/assets/stylesheets/screen/events.css.scss
+++ b/app/assets/stylesheets/screen/events.css.scss
@@ -10,6 +10,8 @@
     display: block;
     float: right;
     color: #777;
+    font-size: 13pt;
+    margin-bottom: 30pt;
 }
 
 .participants ul {
@@ -73,6 +75,7 @@
 
 .note {
     color: #777;
+    font-size: 13pt;
 }
 
 #when {
