--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -45,8 +45,8 @@
 
   .new-event
     = link_to '/events/new', :class => 'button' do
-      %span.symbol +
-      Suggest an event
+      %span.symbol R
+      Add an event
 
   .clear
     
