--- a/app/assets/stylesheets/screen/feedbacks.css.scss
+++ b/app/assets/stylesheets/screen/feedbacks.css.scss
@@ -20,13 +20,27 @@ div.feedback, form.feedback {
 }
 
 .feedback a.url, .feedback a.url:visited {
-    padding: 2px;
+    padding: 0;
+    margin: 0;
+    padding-right: 3px;
     border-radius: 2px;
-    font-size: 12pt;
+    font-size: 11pt;
+    border: 1px solid white;
+    display: inline-block;
+    background: #555;
+    color: #eee;
+}
+
+.feedback a.url:hover {
+    background: white;
+    color: #222;
+    text-decoration: none;
 }
 
 .feedback a.url img {
     vertical-align: middle;
+    background: white;
+    padding: 2px;
 }
 
 form.feedback a.button {
