--- a/app/assets/stylesheets/screen/feedbacks.css.scss
+++ b/app/assets/stylesheets/screen/feedbacks.css.scss
@@ -38,6 +38,8 @@ div.feedback, form.feedback {
 }
 
 .feedback a.url img {
+    width: 16px;
+    height: 16px;
     vertical-align: middle;
     background: white;
     padding: 2px;
