Get rid of RoughTrad, sad but necessary. Speed++, Accent_problems--

--- a/app/assets/stylesheets/screen/application.css.scss
+++ b/app/assets/stylesheets/screen/application.css.scss
@@ -35,7 +35,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: WCRoughTrad;
+    font-family: OblikBold;
 }
 
 h3 {
@@ -110,7 +110,7 @@ a.admin, a.admin:visited {
 }
 
 .welcome, .tagline p {
-    font-family: WCRoughTrad;
+    font-family: OblikBold;
 }
 
 strong {
